list.comment.back.html.twig

--- a/view/backend/homepage.back.html.twig
+++ b/view/backend/homepage.back.html.twig
@@ -27,7 +27,7 @@
                 <div class="card-body d-flex flex-column justify-content-center align-items-center">
                     <i class="bi bi-chat-dots display-4 mb-3"></i>
                     <h5 class="card-title">Commentaires</h5>
-                    <p class="card-text fs-5"><a class="nav-link" href="{{ racineURL }}admin/commentaire">Liste des commentaires</a> <a class="nav-link" href="{{ racineURL }}admin/commentaire/add">Ajout d'un commentaire</a></p>
+                    <p class="card-text fs-5"><a class="nav-link" href="{{ racineURL }}admin/commentaire">Liste des commentaires</a> </p>
                 </div>
             </div>
         </div>
