--- a/view/inscription.html.twig
+++ b/view/inscription.html.twig
@@ -1,9 +1,9 @@
 {% extends "template.front.html.twig" %}
 
-{% block title %}{{ parent() }} | Connexion {% endblock %}
+{% block title %}{{ parent() }} | Inscription {% endblock %}
 
-    {% block hero_title %}Connexion{% endblock %}
-    {% block hero_text %}Merci de vous connecter{% endblock %}
+    {% block hero_title %}Inscription{% endblock %}
+    {% block hero_text %}Merci de vous inscrire{% endblock %}
 
 {% block main %}
     <div class="container py-5">
@@ -13,7 +13,7 @@
                 <div class="card border-0 shadow-sm">
                     <div class="card-header bg-primary text-white">
                         <h4 class="mb-0">
-                            <i class="bi bi-pencil-square me-2"></i>Formulaire de connexion
+                            <i class="bi bi-pencil-square me-2"></i>Formulaire d'inscription
                         </h4>
                     </div>
                     <div class="card-body p-4">
@@ -67,11 +67,6 @@
                                 </button>
                                 <a href="{{ racineURL }}" class="btn btn-outline-secondary btn-lg">
                                     <i class="bi bi-arrow-left me-2"></i>Retour
-                                </a>
-                            </div>
-                            <div class="d-flex gap-3 pt-3 border-top">
-                                <a href="{{ racineURL }}/inscription" class="btn btn-outline-success btn-lg">
-                                    <i class="bi bi-arrow-right me-1"></i>Pas encore inscrit ? Inscrivez-vous !
                                 </a>
                             </div>
                         </form>
